# AtmosphericModels

./: .gitignore  LICENSE  setup.cfg
Kurucz/: Kurucz_README.md
src/atmospheric_models/: model.py
