[metadata]
name = atmospheric_models-swyee
version = 0.0.1
author = Samuel Yee
author_email = samuelyeewl@gmail.com
description = Tools for interfacing with stellar atmospheric models
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
